# sem-mem

./: .env.example  .gitignore  CLAUDE.md  Decisions.md  Dockerfile  LICENSE  README.md  app.py  app_api.py  docker-compose.yml  instructions.example.txt  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt  sema_files.txt  server.py
examples/: decorator_chat.py  minimal_bot.py  simple_chat.py
scripts/: migrate_embeddings.py
sem_mem/: __init__.py  async_core.py  auto_memory.py  backup.py  config.py  consolidation.py  core.py  decorators.py  exceptions.py  file_access.py  lexical_index.py  playwright_fetch.py  progress.py  stock_tools.py  thread_storage.py  thread_utils.py  vector_index.py  web_search.py
sem_mem/api/: __init__.py  backup.py  files.py
sem_mem/providers/: __init__.py  anthropic.py  azure.py  base.py  google.py  ollama.py  openai_provider.py  openrouter.py  sentence_transformers.py
tests/: __init__.py  test_backup.py  test_consolidation.py  test_file_access.py  test_outcomes.py  test_providers.py  test_thread_utils.py
