[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sem-mem"
version = "0.1.0"
description = "Tiered semantic memory for AI agents with HNSW-based retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "David" }
]
keywords = ["ai", "memory", "rag", "semantic-search", "chatbot", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    "hnswlib>=0.8.0",
    "requests>=2.31.0",  # For web search and fetch
    "beautifulsoup4>=4.12.0",  # For web fetch HTML parsing
    "playwright>=1.40.0",  # For Playwright-based web fetching
]

[project.optional-dependencies]
# Streamlit app dependencies
app = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
]
# FastAPI server dependencies
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]
# Provider dependencies (Tier 2/3)
anthropic = [
    "anthropic>=0.40.0",
]
google = [
    "google-generativeai>=0.8.0",
]
# Note: azure uses openai SDK (already a core dependency)
# Note: ollama uses requests (already widely available)
# Note: openrouter uses openai SDK (already a core dependency)
all-providers = [
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "requests>=2.28.0",
]
# Everything
all = [
    "sem-mem[app,server,dev,all-providers]",
]

[project.urls]
Homepage = "https://github.com/david/sem-mem"
Repository = "https://github.com/david/sem-mem"

[tool.hatch.build.targets.wheel]
packages = ["sem_mem"]

[tool.ruff]
line-length = 100
target-version = "py310"
