[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sem-mem"
version = "0.1.0"
description = "Tiered semantic memory for AI agents with HNSW-based retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "David Liebovitz", email = "codeaccelerate@outlook.com" }
]
keywords = ["ai", "memory", "rag", "semantic-search", "chatbot", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    "hnswlib>=0.8.0",
    "requests>=2.31.0",  # For web search and fetch
    "beautifulsoup4>=4.12.0",  # For web fetch HTML parsing
]

[project.optional-dependencies]
# Web fetching with Playwright (optional, ~100MB+ download)
web-fetch = [
    "playwright>=1.40.0",
]
# Streamlit app dependencies
app = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
]
# FastAPI server dependencies
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]
# Provider dependencies (Tier 2/3)
anthropic = [
    "anthropic>=0.40.0",
]
google = [
    "google-generativeai>=0.8.0",
]
# Local embedding models (no API key required)
local = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]
# Note: azure uses openai SDK (already a core dependency)
# Note: ollama uses requests (already widely available)
# Note: openrouter uses openai SDK (already a core dependency)
all-providers = [
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "requests>=2.28.0",
    "sentence-transformers>=3.0.0",
]
# Everything
all = [
    "sem-mem[app,server,dev,all-providers,web-fetch]",
]

[project.urls]
Homepage = "https://github.com/DrDavidL/sem-mem"
Repository = "https://github.com/DrDavidL/sem-mem"
Documentation = "https://github.com/DrDavidL/sem-mem#readme"
"Bug Tracker" = "https://github.com/DrDavidL/sem-mem/issues"

[tool.hatch.build.targets.wheel]
packages = ["sem_mem"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/local_memory",
    "/.env",
    "/.env.example",
    "/.streamlit",
    "/tests",
    "*.pyc",
    "/__pycache__",
    "/.pytest_cache",
    "/.ruff_cache",
]

[tool.ruff]
line-length = 100
target-version = "py310"
